--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/assets/js/app.js": "/assets/js/app.js?id=61d7ff7f0c59757e87d1",
-    "/assets/css/crater.css": "/assets/css/crater.css?id=6ba60df7635dc2f5fbc5"
+    "/assets/js/app.js": "/assets/js/app.js",
+    "/assets/css/crater.css": "/assets/css/crater.css"
 }
