--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.4 || ^8.0",
         "aws/aws-sdk-php": "^3.142",
         "barryvdh/laravel-dompdf": "^0.9.0",
+        "dannyvankooten/laravel-vat": "^2.0",
         "doctrine/dbal": "^2.10",
         "fideloper/proxy": "^4.0",
         "fruitcake/laravel-cors": "^1.0",
